--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -24,9 +24,17 @@ jobs:
         pip install -r requirements.txt
         pip install pyinstaller
 
+    - name: Download ffmpeg
+      run: |
+        curl -L -o ffmpeg.zip https://www.gyan.dev/ffmpeg/builds/ffmpeg-release-essentials.zip
+        tar -xf ffmpeg.zip
+        move ffmpeg-*/bin/ffmpeg.exe .
+
     - name: Build EXE
       run: |
-        pyinstaller --onefile --console main.py
+        pyinstaller --onefile --console ^
+          --add-binary "ffmpeg.exe;." ^
+          main.py
 
     - name: Upload artifact
       uses: actions/upload-artifact@v4
